syntax = "proto3";

option go_package = "github.com/turao/topics/proto/users";

import "google/protobuf/timestamp.proto";

service Users {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message RegisterUserRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string tenancy = 4; 
}

message RegisterUserResponse {
    string id = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

message GetUserInfoRequest {
    string id = 1;
}

message GetUserInfoResponse {
    UserInfo User = 1;
}

message UserInfo {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string tenancy = 5;
    google.protobuf.Timestamp created_at = 6;
    optional google.protobuf.Timestamp deleted_at = 7;
}

service Groups {
    rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}
    rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse) {}
    rpc GetGroup(GetGroupRequest) returns (GetGroupResponse) {}
    rpc UpdateMembers(UpdateMembersRequest) returns (UpdateMembersResponse) {}
}

message CreateGroupRequest {
    string name = 1;
    string tenancy = 2; 
}

message CreateGroupResponse {
    string id = 1;
}

message DeleteGroupRequest {
    string id = 1;
}

message DeleteGroupResponse {}

message GetGroupRequest {
    string id = 1;
}

message GetGroupResponse {
    GroupInfo group = 1;
}

message GroupInfo {
    string id = 1;
    string name = 2;
    repeated MemberInfo members = 3;
    string tenancy = 4;
    google.protobuf.Timestamp created_at = 5;
    optional google.protobuf.Timestamp deleted_at = 6;
}

message MemberInfo {
    string id = 1;
}

message UpdateMembersRequest {
    string group_id = 1;
    repeated string member_ids = 2;
}

message UpdateMembersResponse {}